--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,76 @@
-.wrapper {
-  padding: 20px;
+body{
+  font-family: 'Open Sans', sans-serif;
+  background:#9ec2da;
+  margin: 0 auto 0 auto;  
+  width:100%; 
+  text-align:center;
+  margin: 20px 0px 20px 0px;   
+}
+
+p{
+  font-size:12px;
+  text-decoration: none;
+}
+
+h1{
+  font-size:2em;
+  color:#000000;
+}
+
+.input-label{
+  color:#525252;
+  margin-bottom: 2px;
+  text-align: left;
+}
+
+.login-wrapper{
+  background:white;
+  width:300px;
+  border-radius:6px;
+  margin: 0 auto 0 auto;
+  padding:5px 0px 10px 0px
+}
+
+.username{
+  background:#ecf0f1;
+  border: #ccc 1px solid;
+  border-bottom: #ccc 2px solid;
+  padding: 8px;
+  width:250px;
+  color:#000000;
+  font-size:1em;
+  border-radius:4px;
+}
+
+.password{
+  border-radius:4px;
+  background:#ecf0f1;
+  border: #ccc 1px solid;
+  padding: 8px;
+  width:250px;
+  font-size:1em;
+}
+
+.btn{
+  background:#2ecc71;
+  width:125px;
+  padding-top:5px;
+  padding-bottom:5px;
+  color:white;
+  border:none;
+  border-radius:4px; 
+  margin: 25px auto;
+  display:block;
+  font-weight:800;
+  font-size:0.8em;
+}
+
+.btn:disabled{
+  background:#575757
+}
+
+.btn:enabled:hover{
+  background:#2CC06B; 
 }
 
 .capitalize-name {
